[package]
name = "gluebuddy"
version = "0.6.1"
authors = ["Levente Polyak <anthraxx@archlinux.org>", "Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://gitlab.archlinux.org/archlinux/gluebuddy"
categories = ["command-line-utilities"]
publish = false

[dependencies]
keycloak = "^21.0"
gitlab = "0.1605.2"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.29"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_repr = "0.1.17"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
difference = "2.0.0"
term = "0.7.0"
itertools = "0.12.0"
base64 = "0.21.5"

[dev-dependencies]
rstest = "0.18.2"
serial_test = "2.0.0"
