[package]
name = "gluebuddy"
version = "0.6.2"
authors = ["Levente Polyak <anthraxx@archlinux.org>", "Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://gitlab.archlinux.org/archlinux/gluebuddy"
categories = ["command-line-utilities"]
publish = false

[dependencies]
keycloak = "^25.0"
gitlab = "0.1701.0"
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.30"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.121"
strum = "0.26.3"
strum_macros = "0.26.4"
term = "1.0.0"
itertools = "0.13.0"
base64 = "0.22.1"
similar = "2.6.0"

[dev-dependencies]
rstest = "0.21.0"
serial_test = "3.1.1"
