[package]
name = "gluebuddy"
version = "0.8.1"
authors = ["Levente Polyak <anthraxx@archlinux.org>", "Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://gitlab.archlinux.org/archlinux/gluebuddy"
categories = ["command-line-utilities"]
publish = false

[dependencies]
keycloak = "^25.0"
gitlab = "0.1805.0"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.31"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
term = "1.2.0"
itertools = "0.14.0"
base64 = "0.22.1"
similar = "2.7.0"
time = { version = "0.3.44", features = ["formatting", "macros", "serde", "parsing"] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"
